--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".login.LoginActivity" />
-        <activity android:name=".signup.SignUpActivity"></activity>
+        <activity android:name=".signup.SignUpActivity" />
+        <activity android:name=".todos.TodosActivity"></activity>
     </application>
 
 </manifest>
