--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".signup.SignUpActivity" />
         <activity android:name=".todos.TodosActivity" />
-        <activity android:name=".todos.AddTodoActivity"></activity>
+        <activity android:name=".todos.AddTodoActivity" />
+        <activity android:name=".todos.EditTodoActivity"></activity>
     </application>
 
 </manifest>
