--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".signup.SignUpActivity" />
         <activity android:name=".todos.TodosActivity" />
         <activity android:name=".todos.AddTodoActivity" />
-        <activity android:name=".todos.EditTodoActivity"></activity>
+        <activity android:name=".todos.EditTodoActivity" />
+        <activity android:name=".items.ItemsActivity"></activity>
     </application>
 
 </manifest>
