--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.+'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
