--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ android:
         - build-tools-25.0.2
         - android-25
         - extra-android-m2repository
+        - extra-google-m2repository
+        - extra-google-google_play_services
     before_install:
         - mkdir "$ANDROID_HOME/licenses" || true
         - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
